# qimgv

./: CMakeLists.txt  core.cpp  index.html  mainwindow.cpp  mainwindow.h  params.json  qimgv.pro  settings.cpp
Utility/qimgv/: CMakeLists.txt  core.h  loader.h  main.cpp  mainwindow.h  settingsdialog.ui  thumbnailer.h
Utility/qimgvmv/: CMakeLists.txt  cache.h  core.cpp  core.h  directorymanager.h  imagefactory.h  mainwindow.cpp  mainwindow.h  opendialog.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  wallpapersetter.h
customWidgets/: clickablewidget.cpp  settingsshortcutwidget.h  slidepanel.h
lib/: fileinfo.h  settings.cpp  settings.h
overlays/: mapoverlay.cpp
res/styles/: dark.qss
sourceContainers/: clip.h  image.h
thumbnailPanel/: thumbnaillabel.cpp  thumbnaillabel.h
viewers/: imageviewer.cpp  imageviewer.h  videoplayer.cpp  videoplayer.h
